still have to edit GameSerializer to extract "Map" Property of Json file